[gd_scene load_steps=14 format=3 uid="uid://c06k5vskawibk"]

[ext_resource type="Script" uid="uid://cu2nqkdp1ut43" path="res://scenes/character_selection/character_selection.gd" id="1_da02o"]
[ext_resource type="Texture2D" uid="uid://m12hdwd5fojv" path="res://characters/assets/idle_1.png" id="2_rk4he"]
[ext_resource type="Texture2D" uid="uid://cl05yswx4012a" path="res://characters/assets/idle_2.png" id="3_5sdvr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o5bvq"]
atlas = ExtResource("2_rk4he")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l56u2"]
atlas = ExtResource("2_rk4he")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xed0"]
atlas = ExtResource("2_rk4he")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh1ae"]
atlas = ExtResource("2_rk4he")
region = Rect2(300, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cqj7k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5bvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l56u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xed0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh1ae")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqj7k"]
atlas = ExtResource("3_5sdvr")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iixut"]
atlas = ExtResource("3_5sdvr")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv8bk"]
atlas = ExtResource("3_5sdvr")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v724p"]
atlas = ExtResource("3_5sdvr")
region = Rect2(300, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7rsvw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqj7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iixut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv8bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v724p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="character_selection" type="Node2D"]
script = ExtResource("1_da02o")

[node name="knight1_animation" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(360, 288)
sprite_frames = SubResource("SpriteFrames_cqj7k")

[node name="knight1_name" type="Label" parent="knight1_animation"]
offset_left = -32.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 55.0
text = "Knight 1"

[node name="knight2_animation" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(896, 288)
sprite_frames = SubResource("SpriteFrames_7rsvw")
frame = 3
frame_progress = 0.22100991

[node name="knight2_name" type="Label" parent="knight2_animation"]
offset_left = -32.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 55.0
text = "Knight 2"

[node name="knight1_button" type="Button" parent="."]
offset_left = 320.0
offset_top = 256.0
offset_right = 400.0
offset_bottom = 344.0

[node name="knight2_button" type="Button" parent="."]
offset_left = 856.0
offset_top = 256.0
offset_right = 936.0
offset_bottom = 344.0

[node name="character_selector_title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1280.0
offset_bottom = 136.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Character Selector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="selected_info" type="Label" parent="."]
offset_top = 160.0
offset_right = 1280.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="background_selector_title" type="Label" parent="."]
offset_top = 464.0
offset_right = 1280.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 32
text = "Select Background"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg1_preview" type="ColorRect" parent="."]
offset_left = 200.0
offset_top = 528.0
offset_right = 360.0
offset_bottom = 648.0
color = Color(0.15, 0.08, 0.25, 1)

[node name="bg1_label" type="Label" parent="bg1_preview"]
offset_right = 160.0
offset_bottom = 120.0
text = "Purple
Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg1_button" type="Button" parent="."]
offset_left = 200.0
offset_top = 528.0
offset_right = 360.0
offset_bottom = 648.0

[node name="bg2_preview" type="ColorRect" parent="."]
offset_left = 560.0
offset_top = 528.0
offset_right = 720.0
offset_bottom = 648.0
color = Color(0.08, 0.15, 0.3, 1)

[node name="bg2_label" type="Label" parent="bg2_preview"]
offset_right = 160.0
offset_bottom = 120.0
text = "Blue
Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg2_button" type="Button" parent="."]
offset_left = 560.0
offset_top = 528.0
offset_right = 720.0
offset_bottom = 648.0

[node name="bg3_preview" type="ColorRect" parent="."]
offset_left = 920.0
offset_top = 528.0
offset_right = 1080.0
offset_bottom = 648.0
color = Color(0.25, 0.08, 0.12, 1)

[node name="bg3_label" type="Label" parent="bg3_preview"]
offset_right = 160.0
offset_bottom = 120.0
text = "Red
Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bg3_button" type="Button" parent="."]
offset_left = 920.0
offset_top = 528.0
offset_right = 1080.0
offset_bottom = 648.0

[node name="play_button" type="Button" parent="."]
offset_left = 512.0
offset_top = 680.0
offset_right = 768.0
offset_bottom = 744.0
theme_override_font_sizes/font_size = 32
text = "Play"

[connection signal="pressed" from="knight1_button" to="." method="_on_knight_1_button_pressed"]
[connection signal="pressed" from="knight2_button" to="." method="_on_knight_2_button_pressed"]
[connection signal="pressed" from="bg1_button" to="." method="_on_bg_1_button_pressed"]
[connection signal="pressed" from="bg2_button" to="." method="_on_bg_2_button_pressed"]
[connection signal="pressed" from="bg3_button" to="." method="_on_bg_3_button_pressed"]
[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
